# Glimpse

./: .gitignore  README.md  glimpse-policy-template.json  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/02-span-model/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-03-SUMMARY.md
.planning/phases/03-async-support/: 03-01-SUMMARY.md  03-02-SUMMARY.md
.planning/phases/04-jaeger-export/: 04-01-SUMMARY.md  04-02-SUMMARY.md
.planning/phases/05-http-trace-propagation/: 05-01-SUMMARY.md  05-02-SUMMARY.md
.planning/phases/06-context-aware-span-api-and-http-middleware/: 06-02-SUMMARY.md  06-03-SUMMARY.md
src/glimpse/: __init__.py  cli.py  config.py  context.py  logwriter.py  middleware.py  policy.py  propagation.py  span.py  tracer.py
src/glimpse/common/: ids.py
src/glimpse/policy/: policy.py
src/glimpse/writers/: base.py  jaeger.py  json.py  logentry.py  logwriter.py  sqlite.py
tests/glimpse/: test_async_tracing.py  test_config.py  test_context_param.py  test_jaeger_integration.py  test_jaeger_writer.py  test_json_writer_spans.py  test_middleware.py  test_policy.py  test_propagation.py  test_span.py  test_span_context.py  test_sqlite_writer.py  test_tracer.py
tests/glimpse/policy/: test_policy.py
