[project]
name = "glimpse"
version = "0.1.0"
description = "Function-level logging and tracing library."
authors = [{ name="Priyansh Patel", email="pxpatel04@gmail.com" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
glimpse = "glimpse.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
